--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy to Hosting
+name: Deploy to Server
 
 on:
   push:
     branches:
-      - main # замените на вашу основную ветку
+      - main # Замените на вашу основную ветку
 
 jobs:
   deploy:
@@ -13,15 +13,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Deploy to Hosting via API
-        env:
-          API_TOKEN: ${{ secrets.API_TOKEN }}
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Copy files via SSH
         run: |
-          # Здесь выполните запрос к API вашего хостинга для обновления кода
-          curl -X POST https://your-hosting-api.com/deploy \
-          -H "Authorization: Bearer $API_TOKEN" \
-          -H "Content-Type: application/json" \
-          -d '{
-                "repository": "https://github.com/Exolter/gar_visitcard",
-                "branch": "main"
-              }'
+          rsync -avz --delete \
+          -e "ssh -o StrictHostKeyChecking=no" \
+          ./ garcom@garcom.ftp.tools:/home/garcom/garcp.com.ua/www/
