--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
         run: |
           rsync -avz --delete \
           -e "ssh -o StrictHostKeyChecking=no" \
-          ./ garcom@garcom.ftp.tools:/home/garcom/garcp.com.ua/www/
+          ./ garcom@garcom.ftp.tools:/garcp.com.ua/www/
